--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Natalie Kappele-Miller's Portfolio</title>
+        <title>NKM Web Design and Web Development</title>
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/app.js"></script>
     </head>
@@ -19,7 +19,7 @@
                             development experience to build powerful websites 
                             designed with the user in mind.
                         </p>
-                        <button class="button-primary">+ Let's Work Together</button>
+                        <button class="button-primary">+ Check Availability</button>
                     </div>
                     <img src="assets/images/hero-cp-screen.png" alt="Compassion Project home screen">
                     <div class="home__hero-vector"></div>
@@ -44,13 +44,13 @@
                     <div class="content">
                         <h3 class="home__project-title">Llama.app Ambassadors</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud.
+                            A fresh, new take on an existing website for brand ambassadors to join the Llama.app Shopify marketing platform.
                         </p>
                     </div>
                     <img src="assets/images/llama-ambassadors-project.png" alt="llama.app ambassadors home">
                     <div class="home__work-vector-2"></div>
                 </div>
-                <div class="home__project-left">
+                <!-- <div class="home__project-left">
                     <img src="assets/images/lptr-project.png" alt="lpt realty Home">
                     <div class="home__work-vector-3"></div>
                     <div class="content">
@@ -62,26 +62,106 @@
                             harmful patterns. 
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="home__about">
                 <div class="home__about-row">
                     <div class="content">
-                        <h2>I've Been an Artist Since I Could Pick Up a <span class="bracket">&lcub;</span> Pencil <span class="bracket">&rcub;</span></h2>
-                        <p style="margin-bottom: 0.5rem;">Ever since I was little, I've been artistically inclined. When I was 5 years old I broke my right arm so naturally I started drawing and coloring with my left hand. These days, I find UX/UI design to be the perfect expression of my creative instincts and design background.</p>
-                        <p>I love the challenge of problem solving that web development often brings. I can confidently exceed the requirements of web pages and systems as well as build clean, optimized web solutions.</p>
+                        <h2>Quick <span class="bracket">&lcub;</span> READ.me <span class="bracket">&rcub;</span></h2>
+                        <p>I've been working in web development for over 7 years. I love designing user interfaces using my education in UX/UI, backed by data-driven research in psychology. Truly I love bringing projects to life through full-stack web development even more.</p>
                     </div>
                     <img src="assets/images/me.png" alt="Self Portrait - Natalie Kappele-Miller">
                     <div class="home__about-vector"></div>
                 </div>
             </div>
             <div class="home__stack">
+                <div class="vertical-span"></div>
                 <div class="vertical-slider">
-                    <img src="assets/images/stack-placeholder.svg">
+                    <div class="vertical-slides">
+                        <div class="slide" id="slide-1">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="js">
+                                    <img src="assets/images/JS-logo.png">
+                                    <p class="lang-name">JavaScript</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-2">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="react">
+                                    <img src="assets/images/react-logo.svg">
+                                    <p class="lang-name">React</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-3">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="vue">
+                                    <img src="assets/images/vue-logo.png">
+                                    <p class="lang-name">Vue</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-4">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="angular">
+                                    <img src="assets/images/angular-logo.svg">
+                                    <p class="lang-name">Angular</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-5">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="php">
+                                    <img src="assets/images/php-logo.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-6">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="node">
+                                    <img src="assets/images/node-logo.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-7">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="coldfusion">
+                                    <img src="assets/images/coldfusion-logo.svg">
+                                    <p class="lang-name">ColdFusion</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-8">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="mongo">
+                                    <img src="assets/images/mongo-logo.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide" id="slide-9">
+                            <div class="vertical-slide__row">
+                                <div class="circle"></div>
+                                <div class="verticle-slide" id="sql">
+                                    <img src="assets/images/sql-logo.svg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <img src="assets/images/stack-placeholder.svg"> -->
                 </div>
                 <div class="content">
                     <h2>Fully <span class="bracket">&lcub;</span> Stacked <span class="bracket">&rcub;</span></h2>
-                    <p>8 languages (and counting++)</p>
+                    <p>9 languages (and counting++)</p>
+                    <button id="test-button">Testy</button>
                 </div>
             </div>
             <div class="home__cta">
@@ -89,32 +169,11 @@
                 <div class="home__cta-wrapper">
                     <div class="content">
                         <h2>Ready for a Beautiful, Impactful Website?</h2>
-                        <button class="button-primary">+ Let's Work Together</button>
+                        <button class="button-primary">+ Check Availability</button>
                     </div>
                 </div>
                 <div class="home__cta-vector-2"></div>
             </div>
         </main>
-        <footer>
-            <div class="home__footer-wrapper">
-                <div class="home__footer-group">
-                    <img src="assets/images/nkm-logo.svg" alt="NKMedia">
-                </div>
-                <div class="home__footer-group">
-                    <h4>Links</h4>
-                    <ul class="home__footer-links">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Case Studies</li>
-                    </ul>
-                </div>
-                <div class="home__footer-group">
-                    <h4>Contact</h4>
-                    <ul class="home__footer-links">
-                        <li>someemail@test.com</li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
