Case study updates

--- a/llamaambassadors.html
+++ b/llamaambassadors.html
@@ -3,38 +3,38 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Natalie Kappele-Miller's Portfolio</title>
+        <title>Case Study Llama.app Ambassadors</title>
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/app.js"></script>
     </head>
     <body>
         
-        <main role="main" id="cp">
+        <main role="main" id="ambassadors">
             <div class="cp__hero">
                 <div class="cp__hero-row">
                     <div class="content">
                         <p class="source-bold">Case Study</p>
                         <h1>Llama.app</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <button class="button-primary">View Website</button>
+                        <p>A fresh, new take on an existing website for brand ambassadors to join the Llama.app Shopify marketing platform.</p>
+                        <a href="https://llama.app/ambassadors" target="_blank"><button class="button-primary">Go to Website</button></a>
                     </div>
                     <img src="assets/images/llama-hero-screen.png" alt="Compassion Project home page">
                 </div>
             </div>
             <div class="case-study__section">
                 <h2>Problem</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>The pre-existing Llama.app Ambassadors website had experienced a significant decline in signups for the Llama.app marketing platform. Recognizing the critical importance of effectively engaging this particular audience segment, the client sought a comprehensive overhaul of the website's design. With the overarching goal of bolstering sign-up rates for the platform, the client desired a brand new design that would resonate more deeply with Ambassadors and inspire increased engagement.</p>
             </div>
             <div class="case-study__section">
                 <h2>Solution</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>To create a bolder, brighter and more modernized website with real-life screenshots from the Llama.app marketing platform to reach the target audience of brand ambassadors and engage them to sign up. Additionally, the new website would highlight the array of features offered by the platform, emphasizing their value proposition outline features for brand ambassadors and how they can increase their revenue. The new website would also have significantly more opportunities to sign up increasing the likelihood of the brand ambassadors signing up exponentially.</p>
             </div>
             <div class="case-study__section">
                 <h2>Overview</h2>
                 <div class="case-study__info">
                     <div>
                         <p class="label">Team</p>
-                        <h3 class="value">Natalie Miller - Research, Design, Development</h3>
+                        <h3 class="value">Natalie Kappele-Miller - Research, Design, Development</h3>
                         <h3 class="value">Megan Fiz - Research, Design</h3>
                     </div>
                     <div>
@@ -50,7 +50,7 @@
             <div class="case-study__section">
                 <h2>Style Guide</h2>
                 <h3 class="subtitle">Color</h3>
-                <p>Lorem ipsum.</p>
+                <p>The client wanted to keep the original color palette which included the Royal Purple, Orange and Folly but also wanted to distinguish the Ambassador's side of the marketing platform with a playful and inviting vibe. The Aero blue was added as a nice compliment to the Orange. </p>
                 <div class="swatches">
                     <div class="swatch swatch-tekhelet">
                         <p class="color">Tekhelet</p>
@@ -74,7 +74,6 @@
                     </div>
                 </div>
                 <h3 class="subtitle">Typography</h3>
-                <p>Lorem ipsum.</p>
                 <div class="case-study__info">
                     <div>
                         <p class="label">Header</p>
@@ -92,11 +91,16 @@
                 <img class="case-study-screen" src="assets/images/llama-brands-1.png">
                 <img class="case-study-screen" src="assets/images/llama-brands-2.png">
                 <img class="case-study-screen" src="assets/images/llama-traffic.png">
+                <img class="case-study-screen" src="assets/images/llama-get-paid-1.png">
+                <img class="case-study-screen" src="assets/images/llama-get-paid-2.png">
             </div>
             <div class="case-study__pages">
+                <a href="/cp.html" class="case-study-link">Go to Compassion Project</a>
+            </div>
+            <!---<div class="case-study__pages">
                 <a class="case-study-link"><img class="prev" src="assets/images/next-arrow-white.svg">Previous Project: Compassion Project</a>
                 <a class="case-study-link">Next Project: lpt realty<img class="next" src="assets/images/next-arrow-white.svg"></a>
-            </div>
+            </div>--->
             <!-- <div class="cp__menu">
                 <ul>
                     <li>Problem</li>
