--- a/cp.html
+++ b/cp.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Natalie Kappele-Miller's Portfolio</title>
+        <title>NKM Webdev - Compassion Project Case Study</title>
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/app.js"></script>
     </head>
@@ -15,26 +15,55 @@
                     <div class="content">
                         <p class="source-bold">Case Study</p>
                         <h1>Compassion Project</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <button class="button-primary">View Website</button>
+                        <p>Social impact website that aims to educate visitors about systemic racism in the United States with the hopes of recognizing and preventing continuity of these harmful patterns.</p>
+                        <a href="https://compassionproject.info/" target="_blank"><button class="button-primary">Go to Website</button></a>
                     </div>
                     <img src="assets/images/cppage-hero-screen.png" alt="Compassion Project home page">
                 </div>
             </div>
             <div class="case-study__section">
                 <h2>Problem</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>
+                    The United States has a long history marked by instances of injustice against the 
+                    black community. American capitalism itself was built upon the brutal foundations 
+                    of black slavery. Despite commendable strides, the nation grapples with persistent 
+                    challenges that demand a solemn reckoning. 
+                </p>
+                <p>
+                    Racial bias 
+                    continues to manifest in tragic instances of police brutality against black 
+                    individuals. Equally disconcerting is the glaring lack of mainstream media 
+                    attention afforded to missing black children and women. Within the judicial realm, 
+                    a disheartening reality unfolds, where black victims often find themselves devoid 
+                    of the quality and care essential for the pursuit of justice.
+                </p>
+                <!-- <p>
+                    The United States has a long history of committing atrocities against black people. 
+                    American capitalism was built on the slavery of black people. In many ways the US has 
+                    come a long way to negate a laundry list of crimes. But to this day, black people are 
+                    still murdered by police due to the result of racial bias. Missing black children and 
+                    women are less likely to be covered by the mainstream media. There are a plethora of 
+                    judicial cases where black victims do not receive the quality and care in pursuit of 
+                    justice.
+                </p> -->
             </div>
             <div class="case-study__section">
                 <h2>Solution</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>
+                    Eliminate ignorance about the systemic racism in the United States. Make an impact by 
+                    showing the alarming proximity in time of heinous acts committed against the black 
+                    community. This was created in hopes to educate, inform and in turn disrupt the cyclical
+                    nature of history. Embracing the principle that "Those who forget history are doomed to 
+                    repeat it," the intention is to build a future grounded in understanding, empathy, 
+                    and positive change.
+                </p>
             </div>
             <div class="case-study__section">
                 <h2>Overview</h2>
                 <div class="case-study__info">
                     <div>
                         <p class="label">Team</p>
-                        <h3 class="value">Natalie Miller - Research, Design, Development</h3>
+                        <h3 class="value">Natalie Kappele-Miller - Research, Design, Development</h3>
                         <h3 class="value">Kyle Leonard - Research, Development</h3>
                     </div>
                     <div>
@@ -50,7 +79,7 @@
             <div class="case-study__section">
                 <h2>Style Guide</h2>
                 <h3 class="subtitle">Color</h3>
-                <p>The seriousness of the content and subject matter warranted use of stark contrast of black and white. Then an accent color was needed for emphasis that was bright and bold to indicate passion, energy and action but not as saturated of a red to indicate danger or invoke anger.</p>
+                <p>The seriousness of the content and subject matter warranted use of stark contrast of black and white. Then an accent color was needed for emphasis that was bright and bold and a reddish orange was chosen to indicate passion, energy and action. The intent is to insinuate the danger that is never that far away and to invoke anger at the brutality against the black community for hundreds of years.</p>
                 <div class="swatches">
                     <div class="swatch swatch-black">
                         <p class="color">Black</p>
@@ -89,9 +118,12 @@
                 <img class="case-study-screen" src="assets/images/cp-home-donate.png">
             </div>
             <div class="case-study__pages">
+                <a href="/llamaambassadors.html" class="case-study-link">Go to Llama.app Ambassadors</a>
+            </div>
+            <!---<div class="case-study__pages">
                 <a class="case-study-link"><img class="prev" src="assets/images/next-arrow-white.svg">Previous Project: lpt realty</a>
                 <a class="case-study-link">Next Project: Llama.app Ambassadors<img class="next" src="assets/images/next-arrow-white.svg"></a>
-            </div>
+            </div>--->
             <!-- <div class="cp__menu">
                 <ul>
                     <li>Problem</li>
