--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>NKM Webdev - About Natalie Kappele-Miller</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/app.js"></script>
     </head>
