Scroll to form logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             development experience to build powerful websites 
                             designed with the user in mind.
                         </p>
-                        <button class="button-primary">+ Check Availability</button>
+                        <button id="cta-main" class="button-primary">+ Check Availability</button>
                     </div>
                     <img src="assets/images/hero-cp-screen.png" alt="Compassion Project home screen">
                     <div class="home__hero-vector"></div>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="home__cta-vector-2"></div>
             </div> -->
-            <div class="home__form">
+            <div class="home__form" id="form-section">
                 <div class="home__cta-vector-1"></div>
                 <div class="home__form-row">
                     <div class="content">
