Show slider when scrolled to

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <div class="home__about-vector"></div>
                 </div>
             </div>
-            <div class="home__stack">
+            <div class="home__stack" id="stack-section">
                 <div class="vertical-span"></div>
-                <div class="vertical-slider">
-                    <div class="vertical-slides">
+                <div class="vertical-slider" id="slider">
+                    <div class="vertical-slides" id="slides">
                         <div class="slide" id="slide-1">
                             <div class="vertical-slide__row">
                                 <div class="circle"></div>
