More slider tweaks

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <h1>I Design &amp; Code Powerful, Impactful Web Solutions</h1>
                         <p>
                             I use my UX/UI education combined with full-stack 
-                            development experience to build powerful websites 
+                            web development experience to build powerful websites 
                             designed with the user in mind.
                         </p>
                         <button id="cta-main" class="button-primary">+ Check Availability</button>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="home__stack" id="stack-section">
-                <div class="vertical-span"></div>
+                <div class="vertical-span" id="slider-pole"></div>
                 <div class="vertical-slider" id="slider">
                     <div class="vertical-slides" id="slides">
                         <div class="slide" id="slide-1">
